k8s_resources/deploymentapp1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: app1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: flask
          image: noureddined123/flaskapp1:latest
          imagePullPolicy: Always
          volumeMounts:
          - name: proxy-dir
            mountPath: /tmp/appd/run
          ports:
          - containerPort: 5000
      restartPolicy: Always
      volumes:
        - name: proxy-dir
          hostPath:
            path: /tmp/appd
            type: Directory
