k8s_resources/deploymentapp2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: flask
          image: noureddined123/flaskapp2:latest
          imagePullPolicy: Always
          volumeMounts:
          - name: persistent-storage
            mountPath: /tmp/appd/run
          ports:
          - containerPort: 5001
      restartPolicy: Always
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: nfs
