k8s_resources/deploymentnodejs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs
  labels:
    app: nodejs
spec:
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
        - name: nodejs
          image: noureddined123/app3njs:latest
          volumeMounts:
          - mountPath: /opt/appdynamics
            name: appd-agent-repo
      volumes:
        - name: appd-agent-repo
          emptyDir: {}
