k8s_resources/deploymentproxy.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: proxy
  labels:
    app: proxy
spec:
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
        - name: proxy
          image: noureddined123/pythonproxy
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /tmp/appd/run
            name: proxy-dir
      restartPolicy: Always
      volumes:
        - name: proxy-dir
          hostPath:
            path: /tmp/appd
            type: Directory
