k8s_resources/serviceapp2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
