k8s_resources/serviceapp3.yaml
apiVersion: v1
kind: Service
metadata:
  name: service3
spec:
  selector:
    app: nodejs
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
